hphp/test/slow/enum-invalid-base/num.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/num.php on line 3
